update LoginApp workshop